--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ owner:
 links:
   - title: About Me
     url: /
-  - title: Blogs
-    url: /blogs/
+  - title: Blog
+    url: /blog/
   - title: Hobbies
     url: /hobbies/
   - title: Projects
